fix: too much

--- a/static/css/colours.css
+++ b/static/css/colours.css
@@ -6,7 +6,7 @@
 
 	/* Text */
 	--fg: var(--base05);
-	--off-fg: var(--base08);
+	--off-fg: var(--base07);
 	--muted: var(--base03);
 	--link: var(--base0D);
 	--hover: var(--base0C);
